add wind + direction

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 table {
     border: 1px solid black;
     box-shadow: 0px 0px 20px black;
-    background: linear-gradient(to bottom right, #576AFF, #D1D6FF);
+    background: linear-gradient(to bottom right, #3048FE, #E3E6FF);
 }
 
 .bord {
